--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/gr1Teaching-relase-2.1.1.zip
-/gr1Teaching-relase-2.1.1
+gr1Teaching-relase-2.1.1.zip
+gr1Teaching-relase-2.1.1
 *.toml
+1-100Action.py
